--- a/index.html
+++ b/index.html
@@ -159,32 +159,32 @@
                             <div class="tab-pane active" id="bebidas-sem-alcool">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4" alt="Coca-cola">
+                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Coca-cola">
                                         <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4" alt="Suco">
+                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Suco">
                                         <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4" alt="Coca-cola">
+                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Coca-cola">
                                         <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4" alt="Suco">
+                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Suco">
                                         <h5 class="text-colored fw-bold mt-2">Suco</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4" alt="Coca-cola">
+                                        <img src="./images/cardapio/bebidas/coca-cola.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Coca-cola">
                                         <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4" alt="Suco">
+                                        <img src="./images/cardapio/bebidas/suco.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Suco">
                                         <h5 class="text-colored fw-bold mt-2">Suco</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
@@ -193,17 +193,17 @@
                             <div class="tab-pane" id="bebidas-alcoolicas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/cerveja.jpg" class="d-block w-100 rounded-4" alt="Cerveja">
+                                        <img src="./images/cardapio/bebidas/cerveja.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Cerveja">
                                         <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/vinho.jpg" class="d-block w-100 rounded-4" alt="Vinho">
+                                        <img src="./images/cardapio/bebidas/vinho.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Vinho">
                                         <h5 class="text-colored fw-bold mt-2">Vinho</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/bebidas/vinho.jpg" class="d-block w-100 rounded-4" alt="Vinho">
+                                        <img src="./images/cardapio/bebidas/vinho.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Vinho">
                                         <h5 class="text-colored fw-bold mt-2">Vinho</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
@@ -212,22 +212,22 @@
                             <div class="tab-pane" id="entradas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4" alt="Nome da entrada">
+                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Nome da entrada">
                                         <h5 class="text-colored fw-bold mt-2">Entrada</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4" alt="Vinho">
+                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Vinho">
                                         <h5 class="text-colored fw-bold mt-2">Entrada</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4" alt="Vinho">
+                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Vinho">
                                         <h5 class="text-colored fw-bold mt-2">Entrada</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4" alt="Vinho">
+                                        <img src="./images/cardapio/entradas/entrada.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Vinho">
                                         <h5 class="text-colored fw-bold mt-2">Entrada</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
@@ -236,27 +236,27 @@
                             <div class="tab-pane" id="pratos-principais">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4" alt="Pizza">
+                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Pizza">
                                         <h5 class="text-colored fw-bold mt-2">Pizza</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/pratos/salmao.jpg" class="d-block w-100 rounded-4" alt="Salmão">
+                                        <img src="./images/cardapio/pratos/salmao.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Salmão">
                                         <h5 class="text-colored fw-bold mt-2">Salmão</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4" alt="Pizza">
+                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Pizza">
                                         <h5 class="text-colored fw-bold mt-2">Pizza</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/pratos/salmao.jpg" class="d-block w-100 rounded-4" alt="Salmão">
+                                        <img src="./images/cardapio/pratos/salmao.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Salmão">
                                         <h5 class="text-colored fw-bold mt-2">Salmão</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4" alt="Pizza">
+                                        <img src="./images/cardapio/pratos/pizza.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Pizza">
                                         <h5 class="text-colored fw-bold mt-2">Pizza</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
@@ -265,27 +265,27 @@
                             <div class="tab-pane" id="sobremesas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4" alt="Bolo">
+                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Bolo">
                                         <h5 class="text-colored fw-bold mt-2">Bolo</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/sobremesas/cupcake.jpg" class="d-block w-100 rounded-4" alt="Cupcake">
+                                        <img src="./images/cardapio/sobremesas/cupcake.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Cupcake">
                                         <h5 class="text-colored fw-bold mt-2">Cupcake</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4" alt="Bolo">
+                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Bolo">
                                         <h5 class="text-colored fw-bold mt-2">Bolo</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/sobremesas/cupcake.jpg" class="d-block w-100 rounded-4" alt="Cupcake">
+                                        <img src="./images/cardapio/sobremesas/cupcake.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Cupcake">
                                         <h5 class="text-colored fw-bold mt-2">Cupcake</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4" alt="Bolo">
+                                        <img src="./images/cardapio/sobremesas/bolo.jpg" class="d-block w-100 rounded-4 cardapio-image" alt="Bolo">
                                         <h5 class="text-colored fw-bold mt-2">Bolo</h5>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, atque.</p>
                                     </div>
